# cookiecutter-django-react

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/backend/: .env.backend.railway  Dockerfile  conftest.py  pyproject.toml
{{cookiecutter.project_slug}}/backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
{{cookiecutter.project_slug}}/backend/core/management/commands/: setup_superuser.py
{{cookiecutter.project_slug}}/backend/core/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/backend/core/tests/: factories.py  test_models.py  test_views.py
{{cookiecutter.project_slug}}/backend/{{cookiecutter.project_slug}}/: production_settings.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/frontend/: .env.frontend.railway  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package.json  vite.config.ts
{{cookiecutter.project_slug}}/frontend/public/: manifest.json  sw.js
{{cookiecutter.project_slug}}/frontend/src/: App.tsx  index.css  types.ts
{{cookiecutter.project_slug}}/frontend/src/components/Navbar/: Navbar.tsx
{{cookiecutter.project_slug}}/frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
{{cookiecutter.project_slug}}/frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
{{cookiecutter.project_slug}}/frontend/src/pages/Home/: HomePage.tsx
(+1 files in other folders)
